--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <label class="label">
                               <span class="label-text">Pin</span>
                             </label>
-                            <input type="password" placeholder="Your Pin" class="input input-bordered" autocomplete="off" required />
+                            <input id="pin-num" type="password" placeholder="Your Pin" class="input input-bordered" autocomplete="off" required />
                             <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                             </label>
@@ -59,6 +59,8 @@
 
 
     <script src="./js/login.js"></script>
+
+   
 
     
 </body>
